--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,17 @@ h5 {
 	font-family: 'Koulen';
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+	display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+
 .contain {
 	@apply mx-auto w-[90%] max-w-7xl;
 }
