--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ h5 {
 	font-family: 'Koulen';
 }
 
+a {
+	@apply text-crayola;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
 	display: none;
