update selection styling

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 @tailwind components;
 @tailwind utilities;
 
+::selection {
+	@apply bg-opal text-white;
+}
+
 h1,
 h2,
 h3,
@@ -16,22 +20,6 @@ h5 {
 a {
 	@apply text-crayola;
 }
-
-/* input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-	-webkit-text-fill-color: white;
-	-webkit-box-shadow: 0 0 0px 1000px #253341 inset;
-	box-shadow: 0 0 0px 1000px #253341 inset;
-	transition: background-color 5000s ease-in-out 0s;
-	color: white;
-} */
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
